--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,12 @@
+# Server Configuration
+PORT=3001
+
+# SMTP Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
+SMTP_FROM=your-email@gmail.com
+
+# Contact Email
+CONTACT_EMAIL=contact@yourcompany.com
