SMTP Diagnostic and Complete Fix

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,6 @@ SMTP_FROM=your-email@gmail.com
 
 # Contact Email
 CONTACT_EMAIL=contact@yourcompany.com
+
+# Debug Mode (set to true for detailed SMTP logs)
+SMTP_DEBUG=true
