--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "server",
+  "name": "drops-chemicals-server",
   "version": "1.0.0",
-  "description": "Backend server for the application",
+  "description": "Email server for Drops Chemicals website",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["email", "server", "express", "typescript"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
@@ -19,7 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
-    "tsx": "^4.6.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   }
 }
