Create missing server directory and files

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,6 @@
-# SMTP Configuration
+PORT=3001
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
-
-# Contact Email (where form submissions will be sent)
-CONTACT_EMAIL=contact@dropschemicals.com
-
-# Server Configuration
-PORT=3001
-NODE_ENV=development
+SMTP_FROM=your-email@gmail.com
